# django-organizations

./: .gitignore  conftest.py  requirements-dev-test.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
example/conf/: urls.py
organizations/: abstract.py  base.py  fields.py  forms.py  models.py  settings.py  views.py
organizations/backends/: __init__.py  defaults.py
organizations/migrations/: 0001_initial.py  0002_model_update.py
test_abstract/migrations/: 0001_initial.py
test_accounts/: models.py
test_accounts/migrations/: 0001_initial.py
test_custom/: models.py
test_custom/migrations/: 0001_initial.py
test_vendors/migrations/: 0001_initial.py
tests/: settings.py  test_backends.py  test_models.py  test_utils.py  urls.py  utils.py
