[metadata]
author=Ben Lopatin
author_email=ben@wellfire.co
name=django-organizations
version=0.9.3-dev
description=Group accounts for Django
url=https://github.com/bennylope/django-organizations/
license=BSD License
classifiers = 
		Development Status :: 4 - Beta
		Environment :: Web Environment
		Intended Audience :: Developers
		License :: OSI Approved :: BSD License
		Operating System :: OS Independent
		Programming Language :: Python
		Programming Language :: Python :: 2.7
		Programming Language :: Python :: 3.4
		Programming Language :: Python :: 3.5
		Programming Language :: Python :: 3.6
		Programming Language :: Python :: Implementation :: CPython
		Programming Language :: Python :: Implementation :: PyPy
		Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	django >= 1.10

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 119
# Ignore some well known paths
exclude = .venv,.tox,dist,doc,build,*.egg,db/env.py,db/versions/*.py,site

[nosetests]
verbosity=2
with-coverage=1
cover-erase=1
cover-package=social
rednose=1